k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-template
  template:
    metadata:
      labels:
        app: client-template
    spec:
      containers:
      - name: client-container
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        image: client
        ports:
        - containerPort: 3000


---


apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort
  selector:
    app: client-template
  ports:
  - name: client-port
    protocol: TCP
    port: 3000
    targetPort: 3000
