k8s/comments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-template
  template:
    metadata:
      labels:
        app: comments-template
    spec:
      containers:
      - name: comments-container
        imagePullPolicy: IfNotPresent
        image: comments
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 4001

---

apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: comments-template
  ports:
  - name: comments-port
    protocol: TCP
    port: 4001
    targetPort: 4001
