k8s/moderation.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
  labels:
    app: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-template
  template:
    metadata:
      labels:
        app: moderation-template
    spec:
      containers:
      - name: moderation-container
        imagePullPolicy: IfNotPresent
        image: moderation
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 4003


---

apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: moderation-template
  ports:
  - name: moderation-port
    protocol: TCP
    port: 4003
    targetPort: 4003
