k8s/query.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-template
  template:
    metadata:
      labels:
        app: query-template
    spec:
      containers:
      - name: query-container
        imagePullPolicy: IfNotPresent
        image: query
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 4002


---

apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query-template
  ports:
  - name: query-port
    protocol: TCP
    port: 4002
    targetPort: 4002
