k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-global
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/posts/create"
        backend:
          service:
            name: posts-clusterip-srv
            port: 
              number: 4000
      - pathType: Prefix
        path: "/posts"
        backend:
          service:
            name: query-srv
            port: 
              number: 4002
      - pathType: Prefix
        path: "/posts/?(.*)/comments"
        backend:
          service:
            name: comments-srv
            port: 
              number: 4001
